kubernetes/infrastructure/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-flux
spec:
  controllerName: io.cilium/gateway-controller
